--- a/contact.html
+++ b/contact.html
@@ -69,6 +69,13 @@
     </style>
   </head>
   <body>
+
+
+
+     <!-- Loader -->
+ <div class="loader-container" id="loader">
+  <div class="loader"></div>
+</div>
     <header>
       <nav class="navbar">
         <div class="logo">Delicious Bites</div>
@@ -143,6 +150,14 @@
     </footer>
 
     <script>
+
+
+window.onload = function() {
+            setTimeout(() => {
+                document.getElementById("loader").style.display = "none";
+                document.getElementById("content").style.display = "block";
+            }, 1000); // 2 seconds delay
+        };
       document.addEventListener("DOMContentLoaded", () => {
         const menuToggle = document.querySelector(".menu-toggle");
         const navLinks = document.querySelector(".nav-links");
