--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script defer src="js/home.js"></script>
   </head>
   <body>
+ <!-- Loader -->
+ <div class="loader-container" id="loader">
+  <div class="loader"></div>
+</div>
+
     <header>
       <nav class="navbar">
         <div class="logo">Delicious Bites</div>
@@ -158,6 +163,14 @@
     </footer>
 
     <script>
+
+        window.onload = function() {
+            setTimeout(() => {
+                document.getElementById("loader").style.display = "none";
+                document.getElementById("content").style.display = "block";
+            }, 2000); // 2 seconds delay
+        };
+
       document.addEventListener("DOMContentLoaded", () => {
         const menuToggle = document.querySelector(".menu-toggle");
         const navLinks = document.querySelector(".nav-links");
